Updated some minor issue